--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
       
       <div class="wg-hero dark container" style="margin-left: 6rem; margin-right: 6rem; text-align: center;">
           <h1 class="hero-title">
-            The 1st workshop on Federated Learning for Unbounded and Intelligent Decentralization (FLUID)
+            The 1st Workshop on Federated Learning for Unbounded and Intelligent Decentralization (FLUID)
           </h1>
 
           
