--- a/submission/index.html
+++ b/submission/index.html
@@ -664,8 +664,8 @@
 <li>We will follow the same review process in the main AAAI conference by considering a double-blind review process with three reviewers per submission.  Please review the anonymity guidelines of the AAAI main conference.</li>
 </ul>
 <h3 id="proceedings"><strong>Proceedings</strong></h3>
-<p><strong>Regular Papers</strong> will be included in the proceedings of our workshop as part of the &hellip;.</p>
-<h3 id="submission-portalhttpscmt3researchmicrosoftcom"><strong><a href="https://cmt3.research.microsoft.com" target="_blank" rel="noopener">Submission Portal</a></strong></h3>
+<p><strong>Regular Papers</strong> will be included in the proceedings of our workshop as part of (TBD)</p>
+<h3 id="submission-portalhttpscmt3researchmicrosoftcomfluid2025"><strong><a href="https://cmt3.research.microsoft.com/fluid2025" target="_blank" rel="noopener">Submission Portal</a></strong></h3>
 </div>
   
 
