--- a/cfp/index.html
+++ b/cfp/index.html
@@ -263,8 +263,8 @@
     <link rel="manifest" href="/manifest.webmanifest" />
   
 
-  <link rel="icon" type="image/png" href="/media/icon_hued0d50905c426a0b4edee69a889ed52c_87257_32x32_fill_lanczos_center_3.png" />
-  <link rel="apple-touch-icon" type="image/png" href="/media/icon_hued0d50905c426a0b4edee69a889ed52c_87257_180x180_fill_lanczos_center_3.png" />
+  <link rel="icon" type="image/png" href="/media/icon_hue19ca8e7686dd0214e813a6b3a848dc0_384934_32x32_fill_lanczos_center_3.png" />
+  <link rel="apple-touch-icon" type="image/png" href="/media/icon_hue19ca8e7686dd0214e813a6b3a848dc0_384934_180x180_fill_lanczos_center_3.png" />
 
   <link rel="canonical" href="https://fluid-workshop.github.io/cfp/" />
 
@@ -294,8 +294,8 @@
   <meta property="og:site_name" content="AAAI FLUID Workshop" />
   <meta property="og:url" content="https://fluid-workshop.github.io/cfp/" />
   <meta property="og:title" content="Call for Papers | AAAI FLUID Workshop" />
-  <meta property="og:description" content="FLUID" /><meta property="og:image" content="https://fluid-workshop.github.io/media/icon_hued0d50905c426a0b4edee69a889ed52c_87257_512x512_fill_lanczos_center_3.png" />
-    <meta property="twitter:image" content="https://fluid-workshop.github.io/media/icon_hued0d50905c426a0b4edee69a889ed52c_87257_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
+  <meta property="og:description" content="FLUID" /><meta property="og:image" content="https://fluid-workshop.github.io/media/icon_hue19ca8e7686dd0214e813a6b3a848dc0_384934_512x512_fill_lanczos_center_3.png" />
+    <meta property="twitter:image" content="https://fluid-workshop.github.io/media/icon_hue19ca8e7686dd0214e813a6b3a848dc0_384934_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
   
@@ -663,7 +663,8 @@
 <li>Adaptive learning frameworks for dynamic and non-stationary environments</li>
 <li>Practical applications of FL in healthcare, autonomous systems, finance, smart cities, and IoT networks</li>
 <li>Fairness and bias mitigation in FL across heterogeneous data sources</li>
-<li>Benchmarking and evaluation methods for real-world FL deployments Communication-efficient FL algorithms for resource-constrained environments</li>
+<li>Benchmarking and evaluation methods for real-world FL deployments</li>
+<li>Communication-efficient FL algorithms for resource-constrained environments</li>
 <li>Real-world case studies and success stories of FL deployment</li>
 <li>Tools and platforms for deploying FL systems at scale</li>
 <li>Integration of FL with edge computing and multi-agent systems</li>
