--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
       
    
 
-  <div class="carousel-item active fullscreen" style=" background-color: #666;background-image: url(&#39;https://fluid-workshop.github.io/media/fluid.png&#39;); background-repeat: no-repeat; background-position: right; background-size: cover; ">
+  <div class="carousel-item active fullscreen" style=" background-color: #666;background-image: url(&#39;https://fluid-workshop.github.io/media/fluid.jpg&#39;); background-repeat: no-repeat; background-position: right; background-size: cover; ">
     <div class="position-absolute d-flex w-100 h-100 justify-content-center align-items-center" style="-webkit-backdrop-filter: brightness(0.6); backdrop-filter: brightness(0.6);">
       
       <div class="wg-hero dark container" style="margin-left: 6rem; margin-right: 6rem; text-align: center;">
