--- a/submission/index.html
+++ b/submission/index.html
@@ -664,7 +664,7 @@
 <li>We will follow the same review process in the main AAAI conference by considering a double-blind review process with three reviewers per submission.  Please review the anonymity guidelines of the AAAI main conference.</li>
 </ul>
 <h3 id="proceedings"><strong>Proceedings</strong></h3>
-<p><strong>Regular Papers</strong> will be included in the proceedings of our workshop as part of (TBD)</p>
+<p>Please note that there will be no formal proceedings for this workshop. Instead, we encourage all accepted authors to upload their final papers to arXiv before the workshop. Once your paper is available on <a href="https://arxiv.org/" target="_blank" rel="noopener">arXiv</a>, please provide us with the link, and we will include it on the workshop website. This approach ensures that your work is accessible to the community, while also allowing you to retain control over your paper’s availability and updates. We will link directly to the arXiv versions of the papers on the workshop site for easy reference</p>
 <h3 id="submission-portalhttpscmt3researchmicrosoftcomfluid2025"><strong><a href="https://cmt3.research.microsoft.com/fluid2025" target="_blank" rel="noopener">Submission Portal</a></strong></h3>
 </div>
   
