--- a/program/index.html
+++ b/program/index.html
@@ -293,7 +293,7 @@
   
   <meta property="og:site_name" content="AAAI FLUID Workshop" />
   <meta property="og:url" content="https://fluidworkshop.github.io/program/" />
-  <meta property="og:title" content="Program | AAAI FLUID Workshop" />
+  <meta property="og:title" content="Program (tentative) | AAAI FLUID Workshop" />
   <meta property="og:description" content="FLUID" /><meta property="og:image" content="https://fluidworkshop.github.io/media/icon_hue19ca8e7686dd0214e813a6b3a848dc0_384934_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://fluidworkshop.github.io/media/icon_hue19ca8e7686dd0214e813a6b3a848dc0_384934_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
@@ -312,7 +312,7 @@
 
 
 
-  <title>Program | AAAI FLUID Workshop</title>
+  <title>Program (tentative) | AAAI FLUID Workshop</title>
 </head>
 
 
@@ -643,7 +643,7 @@
     
   
 <div class="universal-wrapper pt-3">
-  <h1>Program</h1>
+  <h1>Program (tentative)</h1>
 
   
 
@@ -654,7 +654,53 @@
 
 <div class="universal-wrapper">
   
-    <div class="article-style"><p>TBA</p>
+    <div class="article-style"><p>Tuesday, March 4, 2025</p>
+<table>
+<thead>
+<tr>
+<th>Time  (EDT)</th>
+<th>Session</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>9:00</td>
+<td><strong>Introduction and Welcome Speech</strong></td>
+</tr>
+<tr>
+<td>9:15</td>
+<td><strong>Keynote Speech:</strong> <em>Co-enhancing of large and small models in heterogeneous federated learning</em>  <br /> <a href="https://fluidworkshop.github.io/author/yang-liu/" target="_blank" rel="noopener">Yang Liu</a>, Tsinghua University, Beijing, China</td>
+</tr>
+<tr>
+<td>10:00</td>
+<td><strong>Oral Session 1</strong></td>
+</tr>
+<tr>
+<td>11:30</td>
+<td><strong>Break</strong></td>
+</tr>
+<tr>
+<td>12:00</td>
+<td><strong>Keynote Speech:</strong> <em>Digital Humans: Science and Simulation in the Time of AI</em> <br />  <a href="https://fluidworkshop.github.io/author/holger-roth/" target="_blank" rel="noopener">Holger Roth</a>, NVIDIA, USA</td>
+</tr>
+<tr>
+<td>12:45</td>
+<td><strong>Lunch</strong></td>
+</tr>
+<tr>
+<td>14:00</td>
+<td><strong>Oral Session 2</strong></td>
+</tr>
+<tr>
+<td>16:00</td>
+<td><strong>Poster Session</strong></td>
+</tr>
+<tr>
+<td>17:00</td>
+<td><strong>Concluding Remarks and Closing Session</strong></td>
+</tr>
+</tbody>
+</table>
 </div>
   
 
