--- a/program/index.html
+++ b/program/index.html
@@ -693,7 +693,7 @@
 </tr>
 <tr>
 <td>16:00</td>
-<td><strong>Keynote Speech:</strong> <em>Digital Humans: Science and Simulation in the Time of AI</em> <br />  <a href="https://fluidworkshop.github.io/author/holger-roth/" target="_blank" rel="noopener">Holger Roth</a>, NVIDIA, USA</td>
+<td><strong>Keynote Speech:</strong> <em>From Theory to Practice: Addressing Challenges of Real-World Federated Learning</em> <br />  <a href="https://fluidworkshop.github.io/author/holger-roth/" target="_blank" rel="noopener">Holger Roth</a>, NVIDIA, USA</td>
 </tr>
 <tr>
 <td>17:00</td>
@@ -756,7 +756,7 @@
 
   
   <p class="powered-by copyright-license-text">
-    © 2024 AAAI FLUID Workshop. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
+    © 2025 AAAI FLUID Workshop. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
   </p>
   
 
