--- a/program/index.html
+++ b/program/index.html
@@ -293,7 +293,7 @@
   
   <meta property="og:site_name" content="AAAI FLUID Workshop" />
   <meta property="og:url" content="https://fluidworkshop.github.io/program/" />
-  <meta property="og:title" content="Program (tentative) | AAAI FLUID Workshop" />
+  <meta property="og:title" content="AAAI FLUID Workshop" />
   <meta property="og:description" content="FLUID" /><meta property="og:image" content="https://fluidworkshop.github.io/media/icon_hue19ca8e7686dd0214e813a6b3a848dc0_384934_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://fluidworkshop.github.io/media/icon_hue19ca8e7686dd0214e813a6b3a848dc0_384934_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
@@ -312,7 +312,7 @@
 
 
 
-  <title>Program (tentative) | AAAI FLUID Workshop</title>
+  <title>AAAI FLUID Workshop</title>
 </head>
 
 
@@ -629,6 +629,8 @@
 
 
 
+  
+
 
 
 
@@ -643,7 +645,7 @@
     
   
 <div class="universal-wrapper pt-3">
-  <h1>Program (tentative)</h1>
+  <h1></h1>
 
   
 
@@ -654,57 +656,164 @@
 
 <div class="universal-wrapper">
   
-    <div class="article-style"><p>Tuesday, March 4, 2025</p>
+    <div class="article-style"><h2 id="schedule">Schedule</h2>
+<h3 id="tuesday-march-4-2025"><strong>Tuesday, March 4, 2025</strong></h3>
+<h3 id="room-tbd"><strong>Room: TBD</strong></h3>
+<hr>
+<h5 id="please-note-that-each-candidate-is-allocated-20-mins-15--3qa">Please note that each candidate is allocated <strong>20</strong> mins: 15 + 3Q/A.</h5>
+<h5 id="it-is-important-to-remain-consistent-with-this-timing-to-ensure-the-workshop-schedule-runs-smoothly-and-aligns-with-the-break-times-defined-by-the-conference">It is important to remain consistent with this timing to ensure the workshop schedule runs smoothly and aligns with the break times defined by the conference.</h5>
+<hr>
 <table>
 <thead>
 <tr>
-<th>Time  (EDT)</th>
-<th>Session</th>
+<th><strong>Time (EDT)</strong></th>
+<th><strong>Session</strong></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>9:00</td>
+<td><strong>9:00am – 9:30am</strong></td>
 <td><strong>Introduction and Welcome Speech</strong></td>
 </tr>
 <tr>
-<td>9:30</td>
-<td><strong>Keynote Speech:</strong> <em>Co-enhancing of large and small models in heterogeneous federated learning</em>  <br /> <a href="https://fluidworkshop.github.io/author/yang-liu/" target="_blank" rel="noopener">Yang Liu</a>, Tsinghua University, Beijing, China</td>
+<td><strong>9:30am – 10:30am</strong></td>
+<td><strong>Keynote Speech:</strong> <em>Co-enhancing of Large and Small Models in Heterogeneous Federated Learning</em> <a href="https://fluidworkshop.github.io/author/yang-liu/" target="_blank" rel="noopener">Yang Liu</a>, Tsinghua University, Beijing, China</td>
 </tr>
 <tr>
-<td>10:30</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td><strong>10:30am – 11:00am</strong></td>
 <td><strong>Break</strong></td>
 </tr>
 <tr>
-<td>11:00</td>
-<td><strong>Oral Session 1</strong></td>
+<td></td>
+<td></td>
 </tr>
 <tr>
-<td>12:30</td>
-<td><strong>Lunch</strong></td>
+<td><strong>11:00am – 12:30pm</strong></td>
+<td><strong>Oral Session 1. Session Chairs: <a href="https://albarqouni.github.io/authors/admin/" target="_blank" rel="noopener">Prof. Shadi Albarqouni</a> and <a href="https://www.linkedin.com/in/marziacanzaniello/" target="_blank" rel="noopener">PhD Marzia Canzaniello</a></strong></td>
 </tr>
 <tr>
-<td>14:00</td>
-<td><strong>Oral Session 2</strong></td>
+<td></td>
+<td></td>
 </tr>
 <tr>
-<td>15:30</td>
+<td><strong>11:00am – 11:20pm</strong></td>
+<td><em>Exploring Gradient Subspaces: Addressing and Overcoming LoRA’s Limitations in Federated Fine-Tuning of Large Language Models</em></td>
+</tr>
+<tr>
+<td></td>
+<td><strong>Authors:</strong> Navyansh Mahla, Kshitij Sharad Jadhav and Ganesh Ramakrishnan. <strong>ArXiv:</strong> <a href="https://arxiv.org/abs/2410.23111" target="_blank" rel="noopener">https://arxiv.org/abs/2410.23111</a>.</td>
+</tr>
+<tr>
+<td><strong>11:20am – 11:40pm</strong></td>
+<td><em>Non-Convex Optimization in Federated Learning via Variance Reduction and Adaptive Learning</em></td>
+</tr>
+<tr>
+<td></td>
+<td><strong>Authors:</strong> Dipanwita Thakur, Antonella Guzzo, Giancarlo Fortino and Sajal K. Das. <strong>ArXiv:</strong> <a href="https://doi.org/10.48550/arXiv.2412.11660" target="_blank" rel="noopener">https://doi.org/10.48550/arXiv.2412.11660</a>.</td>
+</tr>
+<tr>
+<td><strong>11:40am – 12:00pm</strong></td>
+<td><em>SplitFedZip: Learned Compression for Data Transfer Reduction in Split-Federated Learning</em></td>
+</tr>
+<tr>
+<td></td>
+<td><strong>Authors:</strong> Chamani Shiranthika Jayakody Kankanamalage, Hadi Hadizadeh, Parvaneh Saeedi and Ivan Bajic. <strong>ArXiv:</strong> <a href="https://arxiv.org/abs/2412.17150" target="_blank" rel="noopener">https://arxiv.org/abs/2412.17150</a>.</td>
+</tr>
+<tr>
+<td><strong>12:00am – 12:20pm</strong></td>
+<td><em>The Impact of Cut Layer Selection in Split Federated Learning</em></td>
+</tr>
+<tr>
+<td></td>
+<td><strong>Authors:</strong> Justin Dachille, Chao Huang and Xin Liu. <strong>ArXiv:</strong> <a href="https://arxiv.org/abs/2412.15536" target="_blank" rel="noopener">https://arxiv.org/abs/2412.15536</a>.</td>
+</tr>
+<tr>
+<td><strong>12:20am – 12:40pm</strong></td>
+<td><em>FedGA: Federated Learning with Gradient Alignment for Error Asymmetry Mitigation</em></td>
+</tr>
+<tr>
+<td></td>
+<td><strong>Authors:</strong> Chenguang Xiao, Zheming Zuo and Shuo Wang. <strong>ArXiv:</strong> <a href="https://arxiv.org/abs/2412.16582" target="_blank" rel="noopener">https://arxiv.org/abs/2412.16582</a>.</td>
+</tr>
+<tr>
+<td><strong>12:40pm – 2:00pm</strong></td>
+<td><strong>Lunch</strong> (on your own; no sponsored lunch provided)</td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td><strong>2:00pm – 3:30pm</strong></td>
+<td><strong>Oral Session 2: Session Chair: <a href="https://www.linkedin.com/in/daniela-annunziata-173138319/" target="_blank" rel="noopener">PhD Daniela Annunziata</a> and <a href="https://www.linkedin.com/in/marziacanzaniello/" target="_blank" rel="noopener">PhD Marzia Canzaniello</a></strong></td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td><strong>2:00pm – 3:00pm</strong></td>
+<td><strong>Keynote Speech:</strong> <em>From Theory to Practice: Addressing Challenges of Real-World Federated Learning</em>  <a href="https://fluidworkshop.github.io/author/holger-roth/" target="_blank" rel="noopener">Holger Roth</a>, NVIDIA, USA</td>
+</tr>
+<tr>
+<td><strong>3:00pm – 3:20pm</strong></td>
+<td><em>FLAMe: Federated Learning with Attention Mechanism using Spatio-Temporal Keypoint Transformers for Pedestrian Fall Detection in Smart Cities</em></td>
+</tr>
+<tr>
+<td></td>
+<td><strong>Authors:</strong> Byeonghun Kim and Byeongjoon Noh. <strong>ArXiv:</strong> <a href="https://arxiv.org/abs/2412.14768" target="_blank" rel="noopener">https://arxiv.org/abs/2412.14768</a>.</td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td><strong>3:20pm – 4:00pm</strong></td>
 <td><strong>Break</strong></td>
 </tr>
 <tr>
-<td>16:00</td>
-<td><strong>Keynote Speech:</strong> <em>From Theory to Practice: Addressing Challenges of Real-World Federated Learning</em> <br />  <a href="https://fluidworkshop.github.io/author/holger-roth/" target="_blank" rel="noopener">Holger Roth</a>, NVIDIA, USA</td>
+<td></td>
+<td></td>
 </tr>
 <tr>
-<td>17:00</td>
+<td><strong>4:00pm – 4:20pm</strong></td>
+<td><em>Federated Learning for Coronary Artery Plaque Detection in Atherosclerosis Using IVUS Imaging: A Multi-Hospital Collaboration</em></td>
+</tr>
+<tr>
+<td></td>
+<td><strong>Authors:</strong> Chiu-Han Hsiao, Kai Chen, Tsung-Yu Peng and Wei-Chieh Huang. <strong>ArXiv:</strong> <a href="https://arxiv.org/abs/2412.15307" target="_blank" rel="noopener">https://arxiv.org/abs/2412.15307</a>.</td>
+</tr>
+<tr>
+<td><strong>4:20pm – 4:40pm</strong></td>
+<td><em>Differentiated Aggregation to Improve Generalization in Federated Learning</em></td>
+</tr>
+<tr>
+<td></td>
+<td><strong>Authors:</strong> Peyman Gholami and Hulya Seferoglu. <strong>ArXiv:</strong> <a href="https://arxiv.org/abs/2404.11754" target="_blank" rel="noopener">https://arxiv.org/abs/2404.11754</a>.</td>
+</tr>
+<tr>
+<td><strong>4:40pm – 5:00pm</strong></td>
+<td><em>FedGAT: A Privacy-Preserving Federated Approximation Algorithm for Graph Attention Networks</em></td>
+</tr>
+<tr>
+<td></td>
+<td><strong>Authors:</strong> Siddharth Ambekar, Yuhang Yao, Ryan Li and Carlee Joe-Wong. <strong>ArXiv:</strong> <a href="http://arxiv.org/abs/2412.16144" target="_blank" rel="noopener">http://arxiv.org/abs/2412.16144</a>.</td>
+</tr>
+<tr>
+<td><strong>5:00pm – 5:15pm</strong></td>
 <td><strong>Concluding Remarks and Closing Session</strong></td>
 </tr>
 <tr>
-<td>17:15</td>
-<td><strong>Poster Session</strong></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table>
+<hr>
 </div>
   
 
